# pongo

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: CMakeLists.txt  ball.cpp  ball.h  fragment.glsl  game.cpp  game.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  paddle.cpp  paddle.h  renderable.h  renderable_component.h  renderer.cpp  renderer.h  settings.h  shader.cpp  shader.h  vertex.glsl  window.cpp  window.h
vcpkg-overlays/: x64-static-glad.cmake
